--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": ["@vue/babel-preset-jsx"]
+  "presets": ["@vue/babel-preset-jsx"],
+  "plugins":[
+    "@babel/plugin-transform-runtime",
+  ]
 }
