--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-puzzle-vcode",
-  "version": "1.0.6",
+  "version": "1.0.7-beta",
   "description": "vue 滑动拼图验证码",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.config.js",
+    "dev": "webpack-dev-server --config webpack.dev.config.js --port 8081",
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
