--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-puzzle-vcode",
-  "version": "1.0.7-beta",
+  "version": "1.0.7",
   "description": "vue 滑动拼图验证码",
   "main": "dist/main.js",
   "scripts": {
