--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "vue-puzzle-vcode",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "vue 滑动拼图验证码",
   "main": "dist/main.js",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js --port 8081",
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
@@ -14,7 +17,9 @@
     "url": "git+https://github.com/javaLuo/vue-puzzle-vcode.git"
   },
   "keywords": [
-    "vue"
+    "vue",
+    "puzzle",
+    "vcode"
   ],
   "author": "L",
   "license": "ISC",
@@ -26,32 +31,32 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
-    "@babel/runtime": "^7.9.2",
+    "@babel/runtime": "^7.9.6",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-preset-jsx": "^1.1.2",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-vue-app": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
+    "less-loader": "^6.0.0",
     "postcss-loader": "^3.0.0",
-    "style-loader": "^1.1.3",
+    "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^4.0.0",
-    "vue-loader": "^15.9.1",
+    "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "3.10.3"
   },
