--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-puzzle-vcode",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "vue 滑动拼图验证码",
   "main": "dist/main.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js --port 8081",
-    "build": "webpack --config webpack.production.config.js --progress --profile --colors",
+    "build": "webpack --config webpack.production.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": false,
@@ -28,37 +28,37 @@
   },
   "homepage": "https://github.com/javaLuo/vue-puzzle-vcode#readme",
   "dependencies": {
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/polyfill": "^7.11.5",
-    "@babel/runtime": "^7.11.2",
-    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
-    "@vue/babel-preset-jsx": "^1.1.2",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-import": "^1.13.0",
+    "@babel/runtime": "^7.12.13",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-preset-jsx": "^1.2.4",
+    "autoprefixer": "^10.2.4",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-vue-app": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
-    "file-loader": "^6.1.0",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "postcss-loader": "^4.0.1",
-    "style-loader": "^1.2.1",
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
+    "postcss-loader": "^5.0.0",
+    "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^4.1.0",
-    "vue-loader": "^15.9.3",
+    "url-loader": "^4.1.1",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "webpack": "^5.21.2"
   },
   "browserslist": [
     "iOS >= 8",
