--- a/package.json
+++ b/package.json
@@ -1,70 +1,53 @@
 {
-  "name": "vue-puzzle-vcode",
-  "version": "1.1.5",
-  "description": "vue 滑动拼图验证码",
-  "main": "dist/main.js",
-  "files": [
-    "dist/"
-  ],
+  "name": "vvvv",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.config.js --port 8081",
-    "build": "webpack --config webpack.production.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/javaLuo/vue-puzzle-vcode.git"
-  },
-  "keywords": [
-    "vue",
-    "puzzle",
-    "vcode"
-  ],
-  "author": "L",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/javaLuo/vue-puzzle-vcode/issues"
-  },
-  "homepage": "https://github.com/javaLuo/vue-puzzle-vcode#readme",
   "dependencies": {
-    "vue": "^2.6.12",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.36",
+    "register-service-worker": "^1.7.1",
+    "vue": "^3.0.0",
+    "vue3-puzzle-vcode": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.12.15",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/runtime": "^7.12.13",
-    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
-    "@vue/babel-preset-jsx": "^1.2.4",
-    "autoprefixer": "^10.2.4",
-    "babel-loader": "^8.2.2",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-preset-vue-app": "^2.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
-    "file-loader": "^6.2.0",
-    "less": "^4.1.1",
-    "less-loader": "^8.0.0",
-    "postcss-loader": "^5.0.0",
-    "style-loader": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.21.2"
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "prettier": "^2.2.1"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended",
+      "@vue/prettier"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "browserslist": [
-    "iOS >= 8",
-    "Android > 4.1",
-    "last 1 versions",
     "> 1%",
+    "last 2 versions",
     "not dead"
   ]
 }
