--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "vue3-puzzle-vcode",
-  "version": "1.0.0",
+  "name": "vue3-demo2",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib",
     "lint": "vue-cli-service lint",
     "prettier": "prettier --write \"{src,mock}/**/*.{js,css,less}\""
   },
-  "files": ["dist"],
-  "main": "./dist/vue3-puzzle-vcode.umd.min.js",
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
@@ -28,7 +27,7 @@
     "prettier": "^2.2.1"
   },
   "eslintConfig": {
-    "root": false,
+    "root": true,
     "env": {
       "node": true
     },
