--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "vue3-puzzle-vcode",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib",
     "lint": "vue-cli-service lint",
-    "prettier": "prettier --write \"{src,mock}/**/*.{js,css,less,vue}\""
+    "prettier": "prettier --write \"{src,example}/**/*.{js,css,less,vue}\""
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/vue3-puzzle-vcode.umd.min.js",
   "repository": {
     "type": "git",
@@ -25,14 +27,15 @@
   },
   "homepage": "https://github.com/javaLuo/vue-puzzle-vcode#readme",
   "dependencies": {
-    "core-js": "^3.10.1",
-    "vue": "^3.2.20"
+    "core-js": "3.18.2",
+    "vue": "^3.2.20",
+    "vue3-puzzle-vcode": "^1.0.2-beta2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-eslint": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
-    "@vue/compiler-sfc": "^3.0.11",
+    "@vue/compiler-sfc": "3.2.20",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
