--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "element-plus": "^1.0.2-beta.36",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
-    "vue3-puzzle-vcode": "1.0.3-beta2"
+    "vue3-puzzle-vcode": "^1.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
