--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "set NODE_OPTIONS=--openssl-legacy-provider& vue-cli-service serve",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider& vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -12,7 +12,7 @@
     "element-plus": "^1.0.2-beta.36",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
-    "vue3-puzzle-vcode": "^1.0.4"
+    "vue3-puzzle-vcode": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
